# origination_ingestion

./: .dockerignore  .gitignore  README.md  boa-dataset-deep-dive.html  boe-dataset-deep-dive.html  pyproject.toml
containers/: boe.Dockerfile  origination-ingest.Dockerfile
docs/architecture/: how-the-pipeline-works.md
docs/decisions/: 0001-compute-platform.md  0002-network-posture.md  0003-supply-chain-controls.md  0004-boa-discovery-method.md  0005-onelake-folder-structure.md  0006-bo-ingest-network-posture-option-a.md  0007-compute-platform-confirmed-aca-jobs.md  0008-content-scanning-staging-pattern-f.md
docs/operational/: backfill-runbook.md  network-upgrade-plan-option-c.md  week-1-recap.md  week-2-recap.md  week-3-recap.md
infra/: README.md
sample_files/: 2026_04_01_GRT_generacion.xlsx  2026_04_01_R1299_generacion.xlsx  2026_05_04_GRT_generacion.xlsx
scripts/: backfill.sh  deploy-origination.sh  enumerate_departamentos.py  verify_onelake_year.py
src/annex_ingest/: __init__.py  __main__.py  almacen.py  classify.py  config.py  discover.py  orchestrator.py  paths.py  promoter.py  proyectos_ci.py  state.py
src/boa_ingest/: __init__.py  __main__.py  config.py  orchestrator.py  relevance.backfill.yaml  relevance.py  relevance.yaml  sumario.py
src/boe_ingest/: __init__.py  __main__.py  config.py  manifest.py  onelake.py  orchestrator.py  paths.py  promoter.py  relevance.backfill.yaml  relevance.py  relevance.yaml  robots.py  sumario.py
src/endesa_ingest/: __init__.py  __main__.py  config.py  discover.py  (+1 more)
tests/: test_almacen_client.py  test_annex_classify.py  test_annex_discover.py  test_annex_paths.py  test_annex_promote.py  test_annex_proyectos_ci.py  test_annex_state.py  test_backfill_relevance.py  test_boa_relevance.py  test_endesa_discover.py  test_paths.py  test_promoter_crash_safety.py  test_ree_discover.py  test_relevance.py
(+18 files in other folders)
