[project]
name = "origination-ingest"
version = "0.2.0"
description = "Daily ingestion of Spanish gazettes (BOE, BOA, ...) into Microsoft Fabric OneLake"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27,<1.0",
    "tenacity>=8.5,<10.0",
    "pyyaml>=6.0,<7.0",
    "structlog>=24.1,<26.0",
    "azure-identity>=1.17,<2.0",
    "azure-storage-blob>=12.20,<13.0",
    "azure-storage-file-datalake>=12.16,<13.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "respx>=0.21,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[project.scripts]
boe-ingest = "boe_ingest.__main__:main"
boa-ingest = "boa_ingest.__main__:main"
ree-ingest = "ree_ingest.__main__:main"
# Source-agnostic promoter (staging → OneLake). Canonical name is `promoter`;
# `boe-promoter` kept as a transitional alias so the running caj-promoter Job
# doesn't break during the cutover to the unified image.
promoter = "origination_common.promoter:main"
boe-promoter = "origination_common.promoter:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/origination_common", "src/boe_ingest", "src/boa_ingest", "src/ree_ingest"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "respx>=0.21,<1.0",
    "mypy>=1.10,<2.0",
    "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
